cmake_minimum_required(VERSION 3.0)
project(lut VERSION 0.1.0 LANGUAGES CXX)
cmake_policy(SET CMP0048 NEW)

set(LUT_EXTERNALS_DIR ${PROJECT_SOURCE_DIR}/external)

# LUT SOURCES
file(GLOB_RECURSE LUT_SOURCES "${PROJECT_SOURCE_DIR}/src/**.cpp")
file(GLOB_RECURSE LUT_INCLUDES "${PROJECT_SOURCE_DIR}/include/**.hpp")
set(LUT_INCLUDEDIR ${PROJECT_SOURCE_DIR}/include)

# FETCH DEPENDENCIES
execute_process(
	WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
	COMMAND python depo.py
)

# LUT LIB
add_library(lut ${LUT_SOURCES} ${LUT_INCLUDES})
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_target_properties(lut PROPERTIES FOLDER lut)
target_include_directories(lut PUBLIC ${LUT_INCLUDEDIR})

install(TARGETS lut
	RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/lut DESTINATION include FILES_MATCHING PATTERN "*.h*")